sandbox/output
GiledeRose.java:61: error: method updateQuality() is already defined in class GildedRose
   public void updateQuality() {
               ^
1 error
